# interpolatingsolver

./: CMakeLists.txt
cmake/: FindAbc.cmake  FindPeriplo.cmake  PackageOptions.cmake
src/: CMakeLists.txt  InterpolatingSolver.cc  InterpolatingSolver.h  InterpolatingSolverBindings.cc
